--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Asian Electronics</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="images/logo/icon.png" type="image/x-icon">
@@ -14,10 +15,10 @@
 <body>
     <section>
         <div class="container">
-            <nav class="navbar navbar-expand-lg navbar-light ">
+            <nav class="container navbar navbar-expand-lg bg-dark navbar-dark bg-gradient rounded fixed-top">
                 <div class="container-fluid">
                   <a class="navbar-brand" href="#">
-                      <img src="images/logo/logo.png" alt="">
+                      <img class="rounded" src="images/logo/logo.png" alt="">
                   </a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -36,6 +37,11 @@
                       <li class="nav-item">
                         <a class="nav-link" href="#contacts">Contacts Us</a>
                       </li>
+                      <li class="nav-item">
+                          <a class="nav-link" href="#search">
+                            <i class="fa fa-search"></i>
+                          </a>
+                      </li>
                     </ul>
                   </div>
                 </div>
@@ -47,37 +53,47 @@
         <div class="container">
             <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
-                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active bg-dark" aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" class="active bg-dark" aria-label="Slide 2"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" class="active bg-dark" aria-label="Slide 3"></button>
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                     <div class="row">
-                        <div class="col-md-5">
+                        <div class="col-md-7 slider">
+                            <h3>Mackbook Pro</h3>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas inventore optio repellendus omnis? Minima atque hic eveniet eligendi quia! Officiis!</p>
+
+                            <button type="button" class="btn btn-dark"> BUY NOW  <i class="fa fa-arrow-right"></i></button>
 
                         </div>
-                        <div class="col-md-7">
+                        <div class="col-md-5">
                             <img src="images/banner-products/slider1.png" class="d-block w-100" alt="...">
                         </div>
                     </div>
                   </div>
                   <div class="carousel-item">
                     <div class="row">
-                        <div class="col-md-5">
+                        <div class="col-md-7 slider">
+                          <h3>Sound Box Blue</h3>
+                          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas inventore optio repellendus omnis? Minima atque hic eveniet eligendi quia! Officiis!</p>
 
+                          <button type="button" class="btn btn-dark"> BUY NOW  <i class="fa fa-arrow-right"></i></button>
                         </div>
-                        <div class="col-md-7">
+                        <div class="col-md-5">
                             <img src="images/banner-products/slider2.png" class="d-block w-100" alt="...">
                         </div>
                     </div>
                   </div>
                   <div class="carousel-item">
                     <div class="row">
-                        <div class="col-md-5">
+                        <div class="col-md-7 slider">
+                          <h3>Sound Box Yellow</h3>
+                          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas inventore optio repellendus omnis? Minima atque hic eveniet eligendi quia! Officiis!</p>
 
+                          <button type="button" class="btn btn-dark"> BUY NOW  <i class="fa fa-arrow-right"></i></button>
                         </div>
-                        <div class="col-md-7">
+                        <div class="col-md-5">
                             <img src="images/banner-products/slider3.png" class="d-block w-100" alt="...">
                         </div>
                     </div>
@@ -94,6 +110,184 @@
               </div>
         </div>
     </section>
+
+    <section>
+      <div class="container" id="products">
+        <h3>Smartphone</h3>
+        <div class="row row-cols-1 row-cols-md-3">
+          <div class="col card-item">
+            <div class="card h-100 shadow-lg p-3 mb-5 bg-body rounded">
+              <img src="images/phone/phone-1.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Readmi Note 9</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+
+                <h4>$689</h4>
+                <button type="button" class="btn btn-dark"> BUY NOW  <i class="fa fa-arrow-right"></i></button>
+              </div>
+            </div>
+          </div>
+
+          <div class="col card-item">
+            <div class="card h-100 shadow-lg p-3 mb-5 bg-body rounded">
+              <img src="images/phone/phone-2.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">iPhone 11 Pro</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+
+                <h4>$998</h4>
+                <button type="button" class="btn btn-dark"> BUY NOW  <i class="fa fa-arrow-right"></i></button>
+              </div>
+            </div>
+          </div>
+
+          <div class="col card-item">
+            <div class="card h-100 shadow-lg p-3 mb-5 bg-body rounded">
+              <img src="images/phone/phone-3.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Samsung Galaxy Note 10+</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+
+                <h4>$825</h4>
+                <button type="button" class="btn btn-dark"> BUY NOW  <i class="fa fa-arrow-right"></i></button>
+              </div>
+            </div>
+          </div>  
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="container" id="products">
+        <h3>Laptop</h3>
+        <div class="row row-cols-1 row-cols-md-3">
+          <div class="col card-item">
+            <div class="card h-100 shadow-lg p-3 mb-5 bg-body rounded">
+              <img src="images/laptop/product-1.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Asus VivoBook</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+
+                <h4>$1021</h4>
+                <button type="button" class="btn btn-dark"> BUY NOW  <i class="fa fa-arrow-right"></i></button>
+              </div>
+            </div>
+          </div>
+
+          <div class="col card-item">
+            <div class="card h-100 shadow-lg p-3 mb-5 bg-body rounded">
+              <img src="images/laptop/product-2.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Razer Blade 15</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+
+                <h4>$1285</h4>
+                <button type="button" class="btn btn-dark"> BUY NOW  <i class="fa fa-arrow-right"></i></button>
+              </div>
+            </div>
+          </div>
+
+          <div class="col card-item">
+            <div class="card h-100 shadow-lg p-3 mb-5 bg-body rounded">
+              <img src="images/laptop/product-3.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Xiaomi Notebook Pro</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+
+                <h4>$1158</h4>
+                <button type="button" class="btn btn-dark"> BUY NOW  <i class="fa fa-arrow-right"></i></button>
+              </div>
+            </div>
+          </div>  
+        </div>
+      </div>
+    </section>
+
+
+    <section>
+      <div class="container">
+        <h3>Desktop</h3>
+        <div class="row row-cols-1 row-cols-md-3">
+          <div class="col card-item">
+            <div class="card h-100 shadow-lg p-3 mb-5 bg-body rounded">
+              <img src="images/desktop/desktop-01.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Asus D641MD Intel Core i3 9th Gen Brand PC</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. </p>
+
+                <h4>$2134</h4>
+                <button type="button" class="btn btn-dark"> BUY NOW  <i class="fa fa-arrow-right"></i></button>
+              </div>
+            </div>
+          </div>
+
+          <div class="col card-item">
+            <div class="card h-100 shadow-lg p-3 mb-5 bg-body rounded">
+              <img src="images/desktop/desktop-02.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Lenovo IdeaCentre 510 8th Gen Core i3 Brand PC</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+
+                <h4>$2056</h4>
+                <button type="button" class="btn btn-dark"> BUY NOW  <i class="fa fa-arrow-right"></i></button>
+              </div>
+            </div>
+          </div>
+
+          <div class="col card-item">
+            <div class="card h-100 shadow-lg p-3 mb-5 bg-body rounded">
+              <img src="images/desktop/desktop-03.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Dell Vostro 3888MT Core i3 10th Gen Brand PC</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+
+                <h4>$1989</h4>
+                <button type="button" class="btn btn-dark"> BUY NOW  <i class="fa fa-arrow-right"></i></button>
+              </div>
+            </div>
+          </div>  
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="container" id="about">
+        <h3 class="d-flex justify-content-center">Categories</h3>
+          <div class="row category">
+              <div class="col-md-3 shadow-lg p-3 mb-5 bg-body rounded category-effect">
+                  <img src="images/Categories/bag.png" alt="">
+                  <h4>Bag</h4>
+              </div>
+              <div class="col-md-3 shadow-lg p-3 mb-5 bg-body rounded category-effect">
+                  <img src="images/Categories/shoe.png" alt="">
+                  <h4>Shoes</h4>
+              </div>
+              <div class="col-md-3 shadow-lg p-3 mb-5 bg-body rounded category-effect">
+                  <img src="images/Categories/perfume.png" alt="">
+                  <h4>Perfume</h4>
+              </div>
+              <div class="col-md-3 shadow-lg p-3 mb-5 bg-body rounded category-effect">
+                  <img src="images/Categories/pale-order.png" alt="">
+                  <h4>Pale Order</h4>
+              </div>
+          </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="d-flex justify-content-center align-items-center container" id="contacts">
+        <div>
+            <h3>LET STAY IN TOUCH</h3>
+            <h6>Get updates on sales, spicals and more</h6>
+            <input class="form-control" type="text"> 
+            <button class="btn btn-dark"><i class="fa fa-user"></i> Sumbit</button>
+        </div>
+    </div>
+    </section>
+
+    <footer class="text-center bg-dark text-white fixed-bottom">
+      <small>© Asian Electronics | All Right Reserved 2021</small>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
