--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
-                  <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
+                  <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                       <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
@@ -39,7 +39,7 @@
                       </li>
                       <li class="nav-item">
                           <a class="nav-link" href="#search">
-                            <i class="fa fa-search"></i>
+                            <i class="fa fa-search"> Search</i>
                           </a>
                       </li>
                     </ul>
